internal class AnimationStrings
{
    internal static string IS_MOVING = "isMoving";
    internal static string IS_RUNNING = "isRunning";
    internal static string IS_GROUNDED = "isGrounded";
    internal static string Y_VELOCITY = "yVelocity";
    internal static string JUMP_TRIGGER = "jump";
    internal static string IS_ON_WALL = "isOnWall";
    internal static string IS_ON_CEILING = "isOnCeiling";
    internal static string ATTACK_TRIGGER = "attack";
    internal static string CAN_MOVE = "canMove";
    internal static string HAS_TARGET = "hasTarget";
}